[gd_scene load_steps=35 format=3 uid="uid://cxgjfkkahtigx"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_cbyxg"]
[ext_resource type="Texture2D" uid="uid://c74tmmke876dg" path="res://Assets/slime.png" id="1_pe2ly"]
[ext_resource type="Shader" path="res://Shaders/test.gdshader" id="2_uefcf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5oqjt"]
shader = ExtResource("2_uefcf")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_li76w"]
radius = 1.06617

[sub_resource type="Animation" id="Animation_rv1i2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nj5jj"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_4malq"]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_ebasb"]
resource_name = "hitted"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 22, 23]
}

[sub_resource type="Animation" id="Animation_3rdsq"]
resource_name = "idle"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_0pcia"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1a570"]
_data = {
"RESET": SubResource("Animation_rv1i2"),
"attack": SubResource("Animation_nj5jj"),
"death": SubResource("Animation_4malq"),
"hitted": SubResource("Animation_ebasb"),
"idle": SubResource("Animation_3rdsq"),
"walk": SubResource("Animation_0pcia")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3oap2"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lq1yp"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hndor"]
animation = &"hitted"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xte38"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lito1"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3rfjo"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_41sdy"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bmsr0"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_at1rh"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6hrk7"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e7hsf"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dypno"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_rv115"]
blend_point_0/node = SubResource("AnimationNodeAnimation_xte38")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_lito1")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_3rfjo")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_41sdy")
blend_point_3/pos = Vector2(1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_bmsr0")
blend_point_4/pos = Vector2(1, 1)
blend_point_5/node = SubResource("AnimationNodeAnimation_at1rh")
blend_point_5/pos = Vector2(1, -1)
blend_point_6/node = SubResource("AnimationNodeAnimation_6hrk7")
blend_point_6/pos = Vector2(-1, -1)
blend_point_7/node = SubResource("AnimationNodeAnimation_e7hsf")
blend_point_7/pos = Vector2(-1, 1)
blend_point_8/node = SubResource("AnimationNodeAnimation_dypno")
blend_point_8/pos = Vector2(0, 0)
sync = true

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_mkepb"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_5g88s"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_j5lw2"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_3v1p6"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_xlk11"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_v0leo"]
input_0/name = "Normal"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "Death"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_gud2b"]
graph_offset = Vector2(-560.018, 269.511)
nodes/Attack/node = SubResource("AnimationNodeAnimation_3oap2")
nodes/Attack/position = Vector2(-580, 400)
nodes/Death/node = SubResource("AnimationNodeAnimation_lq1yp")
nodes/Death/position = Vector2(220, 580)
nodes/Hitted/node = SubResource("AnimationNodeAnimation_hndor")
nodes/Hitted/position = Vector2(-280, 540)
nodes/Movement/node = SubResource("AnimationNodeBlendSpace2D_rv115")
nodes/Movement/position = Vector2(-740, 120)
nodes/OneShotAttack/node = SubResource("AnimationNodeOneShot_mkepb")
nodes/OneShotAttack/position = Vector2(-120, 160)
nodes/OneShotHit/node = SubResource("AnimationNodeOneShot_5g88s")
nodes/OneShotHit/position = Vector2(180, 300)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_xlk11")
nodes/TimeScale/position = Vector2(-440, 120)
"nodes/TimeScale 2/node" = SubResource("AnimationNodeTimeScale_j5lw2")
"nodes/TimeScale 2/position" = Vector2(-340, 320)
"nodes/TimeScale 3/node" = SubResource("AnimationNodeTimeScale_3v1p6")
"nodes/TimeScale 3/position" = Vector2(-60, 520)
nodes/TransitionDeath/node = SubResource("AnimationNodeTransition_v0leo")
nodes/TransitionDeath/position = Vector2(560, 420)
nodes/output/position = Vector2(880, 380)
node_connections = [&"output", 0, &"TransitionDeath", &"OneShotAttack", 0, &"TimeScale", &"OneShotAttack", 1, &"TimeScale 2", &"OneShotHit", 0, &"OneShotAttack", &"OneShotHit", 1, &"TimeScale 3", &"TimeScale", 0, &"Movement", &"TimeScale 2", 0, &"Attack", &"TimeScale 3", 0, &"Hitted", &"TransitionDeath", 0, &"OneShotHit", &"TransitionDeath", 1, &"Death"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y5vdv"]
radius = 50.8004

[sub_resource type="CircleShape2D" id="CircleShape2D_5euco"]
radius = 12.0416

[node name="Enemy" type="CharacterBody2D" groups=["mob"]]
scale = Vector2(2.9, 2.9)
slide_on_ceiling = false
script = ExtResource("1_cbyxg")
attack_delay = 0.5
life = 10

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_5oqjt")
texture = ExtResource("1_pe2ly")
hframes = 7
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.6)
scale = Vector2(1.08, 0.8)
shape = SubResource("CircleShape2D_li76w")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1a570")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_gud2b")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Movement/blend_position = Vector2(0, 0)
parameters/OneShotAttack/active = false
parameters/OneShotAttack/request = 0
parameters/OneShotHit/active = false
parameters/OneShotHit/request = 0
parameters/TimeScale/scale = 0.7
"parameters/TimeScale 2/scale" = 1.5
"parameters/TimeScale 3/scale" = 0.8
parameters/TransitionDeath/current_state = "Normal"
parameters/TransitionDeath/transition_request = ""
parameters/TransitionDeath/current_index = 0

[node name="ReactionToPlayerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReactionToPlayerArea"]
shape = SubResource("CircleShape2D_y5vdv")

[node name="AttackArea" type="Area2D" parent="."]

[node name="ColisionShapeAttack" type="CollisionShape2D" parent="AttackArea"]
scale = Vector2(1.28, 0.800001)
shape = SubResource("CircleShape2D_5euco")

[node name="TakeDamageArea" type="Area2D" parent="."]

[node name="ColisionShapeTakeDamage" type="CollisionShape2D" parent="TakeDamageArea"]
scale = Vector2(1.28, 0.800001)
shape = SubResource("CircleShape2D_5euco")

[node name="AttackTimer" type="Timer" parent="."]

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="ReactionToPlayerArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="ReactionToPlayerArea" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="area_entered" from="TakeDamageArea" to="." method="_on_take_damage_area_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
